fix post header size on mobile

--- a/pages/labs/Post.module.css
+++ b/pages/labs/Post.module.css
@@ -20,6 +20,7 @@
 }
 
 .postHeader h2 {
+  font-size: clamp(var(--medium), 5vw, var(--extraLarge));
   padding: 0;
 }
 
